--- a/DLL_Lab4_2/DLL_Lab4_2.vcxproj.filters
+++ b/DLL_Lab4_2/DLL_Lab4_2.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="pch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
