--- a/Lab5_ProdMod/Lab5_ProdMod.csproj
+++ b/Lab5_ProdMod/Lab5_ProdMod.csproj
@@ -216,7 +216,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities.cs" />
+    <Compile Include="Classes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
